--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -93,7 +93,7 @@
             position: relative;
         }
     </style>
-    @RenderSection("styles", false)
+*    @RenderSection("styles", false)
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="notification__box">
@@ -127,7 +127,7 @@
                     </a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Trang chủ</a>
+                    <a href="/Admin/index" class="nav-link">Trang chủ</a>
                 </li>
             </ul>
 
@@ -188,7 +188,7 @@
                         role="menu"
                         data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                         <li class="nav-item">
                             <a id="#TongQuanLink" href="/admin/index" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -199,6 +199,12 @@
                             <a id="#QuanLyVeLink" href="/admin/QuanLyTour" class="nav-link">
                                 <i class="fas fa-paper-plane"></i>
                                 <p>Quản lý Tour</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="#QuanLyVeLink" href="/admin/QuanLyLichTrinh" class="nav-link">
+                                <i class="fas fa-paper-plane"></i>
+                                <p>Quản lý lịch trình</p>
                             </a>
                         </li>
                         <!-- Quản lý đặt vé -->
